# genesis-os

./: .gitignore  .zenodo.json  AI_POLICY.md  Agents.md  CHRONOPOEM.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKERFILE  Handbuch.md  README.md  ToDo.yaml  codexinstructions.yaml  codexwork.yaml  depthvalue-core.ts  genesis-sigillin-core.yaml  kontext.json  kontext.yaml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  runDryAgent.ts
.github/workflows/: ci.yml  release.yml  test.yml
codex/: codex.sync.yaml  integration.test.yaml
codexbuild/: aeon-fraktalurs.build.yaml  aeon-genesisos.build.yaml  aeon-resoecho.build.yaml  aeon-shell.build.yaml  overview.yaml  sharedream-interface.build.yaml  unified-mandala.build.yaml
data/: era5_kipppunkte.csv
docs/: agents_drycheck.md  index.md  nullmembran_theorie.md  reference.md  search.html  whitepaper.md
docs/agents/: CodexAuditAgent.md  DepthBundleExporter.md  EvolverGPT.md  FragmentMapper.md  PactDepthGatekeeper.md  SyncRunner.md
docs/sigil/: big-files.sigil.yaml
docs/sigils/: ai-policy-sigillin.yaml  conversations-filter-Mandala.json  conversations-progress.json  conversations-summary.json  todo-sigil.yaml
docs/sigils/conversations-fragments/: fragment-2.json  fragment-3.json
notebooks/: benchmark_utac_vs_cmip6.ipynb  minimal_crep_utac_experiment.ipynb
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
repositorypflege/: ReadMeVorlage.yaml  genesisos-code.yaml
scripts/: filter-conversations.js  generate-conversation-stats.js  generate-readme.js  mark-fragment.js  search-conversations.js  setup-unifiedmandala.sh  split-conversations.js  summarize-conversations.js  validate_crep_phase_matrix.py
scripts/git-hooks/: sendemail-validate.sample
src/genesis_os/: __init__.py
src/genesis_os/cli/: __init__.py  main.py
src/genesis_os/core/: __init__.py  crep.py  orchestrator.py  phase.py
src/genesis_os/dashboard/: __init__.py  mandala.py  sonification.py  web_gui.py
src/genesis_os/plugins/: __init__.py  registry.py
src/genesis_os/plugins/adapters/: __init__.py  advanced_weighting.py  aeon_ai.py  climate_dashboard.py  cosmic_web.py  entropy_governance.py  entropy_table.py  fieldtheory.py  implosive_genesis.py  mandala_visualizer.py  mirror_machine.py  sigillin.py  sonification_adapter.py  utac_core.py
src/genesis_os/runtime/: __init__.py  emergence.py  engine.py  utac.py
src/genesis_os/tools/: __init__.py  bump_versions.py  propagate_diamond.py
test-results/: integration-summary.md
tests/: __init__.py  agents-dry-run.test.js  conftest.py  conversation-stats.test.js  conversation-utils.test.js  crep-phase-matrix.test.js  readme-generator.test.js  search-conversations.test.js
tests/contract/: __init__.py  test_adapter_mocked.py  test_adapters.py
tests/e2e/: __init__.py  test_cycle.py  test_cycle_gui.py
tests/unit/: __init__.py  test_adapters.py  test_bump_versions.py  test_cli.py  test_coverage_gaps.py  test_crep.py  test_dashboard.py  test_emergence.py  test_engine.py  test_orchestrator.py  test_phase.py  test_plugin_registry.py  test_propagate_diamond.py  test_utac.py  test_web_gui.py
